src/test/vm/interface9.php.exp
Test begin
HipHop Fatal error: Declaration of C::foo() must be compatible with that of I::foo() in src/test/vm/interface9.php on line 15
